# Surface_confined_inference

./: .coverage  .gitignore  Automated_slurm_submission.job  CLAUDE.md  README.md  example_inference.py  example_multi_experiment.py  example_slurm.py  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Onlinetesting.yml
C_src/: CMakeLists.txt  ODE_simulator_sundials.cpp
C_src/headers/: SW_functions.cpp  SW_functions.h  functions.cpp  functions.h  square_scheme.cpp
HPC_installers/: readme.md  viking.sh
HPC_installers/ARC/: arc_setup.sh
HPC_installers/Viking/: viking_setup.sh
Surface_confined_inference/: __init__.py  utils.py
Surface_confined_inference/_Debug/: _FittingDebug.py
Surface_confined_inference/_HPCInterface/: RDS.sh  Slurm_processor.py  Slurm_submitter.py  _Slurm.py
Surface_confined_inference/_Heuristics/: _DCVMethods.py  _HeuristicMethods.py  __init__.py
Surface_confined_inference/_core/: _Base.py  _Dispersion.py  _EIS.py  _Experiments.py  _InputChecking.py  _LoadExperiment.py  _Nondimensionalise.py  _PintsFunctions.py  _Processing.py  _SWVStepwise.py  _Voltammetry.py  __init__.py  arc  arc.pub
Surface_confined_inference/_core/_Handlers/: _BaseVoltammetry.py  _ParameterHandler.py
Surface_confined_inference/_core/_MultiExperiment/: AxParetoFuncs.py  SyntheticFuncs.py  _AxInterface.py  _BaseMultiExperiment.py  _FileReader.py  _Grouping.py  _InitialiseExperiment.py  _MultiExperiment.py  _ParameterManager.py  _Plotting.py  _utils.py
Surface_confined_inference/_core/_Options/: _AxOptions.py  _MultiExperimentOptions.py  _OptionsDescriptor.py  _OptionsMeta.py  _OptionsMixin.py  _ParallelOptions.py  _SingleExperimentOptions.py
Surface_confined_inference/_plot/: _harmonics_plotting.py  _multiplotter.py
Surface_confined_inference/_utils/: __init__.py  formatting.py  utilities.py
Surface_confined_inference/infer/: _RunMCMC.py  _SimpleInference.py  __init__.py
Surface_confined_inference/plot/: _EIS_plotting.py  _MCMC_plotting.py  __init__.py  _harmonics_plotting.py  _multiplotter.py  _save_results.py  _utils.py
src/: CMakeLists.txt  ODE_simulator_sundials.cpp  surface_process.cpp
src/headers/: functions.cpp
tests/: MultiExperiment_test.py  SingleExperiment_test.py  SingleExperiment_tests.py  test_base_voltammetry.py  test_options_descriptor.py  test_options_meta.py  test_options_mixin.py
tests/testdata/: Current.npy  CurrentFT.npy  DispersedCurrent.npy  Potential.npy
tests/testdata/DCV/: Current.npy  DispersedCurrent.npy  Potential.npy
tests/testdata/FTACV/: Current.npy
tests/testdata/PSV/: Current.npy  CurrentFT.npy  DispersedCurrent.npy  Potential.npy
tests/testdata/SquareWave/: Current.npy  DispersedCurrent.npy  Potential.npy
tests/testdata/multi/: FTACV-3_Hz-280_mV.txt  FTACV-9_Hz-280_mV.txt  SWV-100_Hz-anodic.txt  SWV-100_Hz-cathodic.txt  SWV-115_Hz-anodic.txt  SWV-115_Hz-cathodic.txt  SWV-125_Hz-anodic.txt  SWV-125_Hz-cathodic.txt  SWV-135_Hz-anodic.txt  SWV-135_Hz-cathodic.txt  SWV-145_Hz-anodic.txt  SWV-145_Hz-cathodic.txt  SWV-150_Hz-anodic.txt  SWV-150_Hz-cathodic.txt  SWV-175_Hz-anodic.txt  SWV-175_Hz-cathodic.txt  SWV-200_Hz-anodic.txt  SWV-200_Hz-cathodic.txt  SWV-300_Hz-anodic.txt  SWV-300_Hz-cathodic.txt  SWV-400_Hz-anodic.txt  SWV-400_Hz-cathodic.txt  SWV-500_Hz-anodic.txt  SWV-500_Hz-cathodic.txt  SWV-65_Hz-anodic.txt  SWV-65_Hz-cathodic.txt  SWV-75_Hz-anodic.txt  SWV-75_Hz-cathodic.txt  SWV-85_Hz-anodic.txt  SWV-85_Hz-cathodic.txt
tests/unit/handlers/: test_parameter_handler.py
