[build-system]

requires = ["scikit-build-core>=0.9.0"]
build-backend = "setuptools.build_meta"



[project]
name="echem_surface_simulators"
version="0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies=[
"ghapi>=1.0.5",
"nox>=2024.4.15",
"pytest>=6.2.5",
"rich>=13.7.1",
"setuptools>=59.6.0",
]